# tidal-subsonic

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: app.rs  auth.rs  auth_mw.rs  config.rs  crypto.rs  db.rs  item_id.rs  lib.rs  main.rs  mapping.rs  response.rs  setup.html  subsonic.rs  tidal_client.rs
src/routes/: browsing.rs  discovery.rs  fallback.rs  lists.rs  lyrics.rs  media.rs  media_cache.rs  metadata_cache.rs  mod.rs  playlists.rs  portal.rs  queue.rs  search.rs  spa.rs  system.rs  transcode.rs  users.rs
src/tidal/: client.rs  dash.rs  mod.rs  registry.rs  types.rs
src/tidal/api/: events.rs  library.rs  mixes.rs  mod.rs  streaming.rs
tests/: http_api.rs
web/: index.html  package.json  pnpm-lock.yaml  vite.config.js
web/src/: App.svelte  api.js  app.css
web/src/lib/: Account.svelte  AdminUsers.svelte  CopyField.svelte  LinkTidal.svelte  Login.svelte
