[package]
name = "tidal-subsonic"
version = "0.1.0"
edition = "2021"
description = "A Subsonic-compatible API server backed by Tidal"
authors = ["Soner Sayakci <s.sayakci@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.7", features = ["cors", "trace"] }

# HTTP client for Tidal API. rustls (not native-tls) so we don't link system
# OpenSSL — simpler, more portable builds and a slimmer runtime image.
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.41", features = ["serialize"] }

# Auth
md5 = "0.8"
sha2 = "0.11"
base64 = "0.22"
rand = "0.10"

# Encrypt TIDAL tokens at rest (multi-user: one DB holds every user's session)
chacha20poly1305 = "0.11"

# Config
toml = "1.1"
dirs = "6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL handling
url = "2"
serde_urlencoded = "0.7"

# XML parsing for DASH manifests
roxmltree = "0.21"

# Database
rusqlite = { version = "0.40", features = ["bundled"] }

# Error handling
anyhow = "1"

# Audio transcoding (AAC-LC in fMP4 -> MP3) for clients that require MP3,
# e.g. the Garmin YuMusic app which declares Media.ENCODING_MP3.
symphonia = { version = "0.6", default-features = false, features = ["aac", "isomp4"] }
mp3lame-encoder = "0.2"

[dev-dependencies]
# Drive the axum Router in-process for integration tests (no TCP bind).
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
